# rt-data

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  main.cpp  toolchain.cmake
.github/: FUNDING.yml
cmake/: FindCppUnit.cmake  FindGPSD.cmake
docs/uml/: add_listener.puml  broker.puml  change_state.puml  components.puml  configuration.puml  control.puml  data.puml  data_bus.puml  dispatch.puml  fetch.puml  gpsread.puml  load_from_impl.puml  policy.puml  read.puml  sensors.puml  serialization.puml  thread.puml  writer.puml
docs/uml/sensors/: add_sensor.puml  sensor.puml  sensorsmanager.puml  start_sensorsmanager.puml  stop_sensorsmanager.puml
src/: Application.h  Broker.cpp  Broker.h  Data.cpp  Data.h  Listener.h  Log.cpp  Log.h  Sensor.cpp  Sensor.h  SensorsManager.cpp  SensorsManager.h  Timestamp.cpp  Timestamp.h  main.cpp
src/concurrent/: ConcurrentQueue.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
src/control/: LambdaState.cpp  LambdaState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/io/: FileWriter.h  GPIO.cpp  GPIO.h  HTTPWriter.cpp  HTTPWriter.h  I2C.cpp  I2C.h  SPI.cpp  SPI.h  SQLiteWriter.cpp  SQLiteWriter.h  Serial.cpp  Serial.h  TCPWriter.cpp  TCPWriter.h  Writer.h
src/sensors/: AnalogSensor.cpp  AnalogSensor.h  GPSSensor.cpp  GPSSensor.h
src/serialization/: ByteObject.h  JSONObject.h  SQLiteObject.h  Serializable.h  SerializedObject.h  Serializer.h
src/time/: Duration.cpp  Duration.h  TimeUnit.cpp  TimeUnit.h  Timestamp.cpp  Timestamp.h
src/utils/: Any.h  Configuration.cpp  Configuration.h  JSONConfiguration.cpp  JSONConfiguration.h  LambdaListener.cpp  LambdaListener.h
test/: BrokerTest.cpp  BrokerTest.h  ByteSerializationTest.cpp  ByteSerializationTest.h  DurationTest.cpp  DurationTest.h  JSONConfigurationTest.cpp  JSONConfigurationTest.h  JSONSerializationTest.cpp  JSONSerializationTest.h  SQLiteSerializationTest.cpp  SQLiteSerializationTest.h  SensorStub.cpp  SensorStub.h  SensorTest.cpp  SensorTest.h  SensorsManagerTest.cpp  SensorsManagerTest.h  StateMachineTest.cpp  StateMachineTest.h  ThreadTest.cpp  ThreadTest.h  TimestampTest.cpp  TimestampTest.h  main.cpp
test/acceptance/: Application.cpp  CMakeLists.txt  Makefile  stub_driver.c
test/acceptance2/: Application.cpp  CMakeLists.txt  config.json  http_server.py  launch_gpsfake.sh  tcp_server.py
test/integration/: FileWriterTest.cpp  HTTPWriterTest.cpp  I2CTest.cpp  SPITest.cpp  SQLiteWriterTest.cpp  TCPWriterTest.cpp
test/integration/i2c_slave/: i2c_slave.ino
test/integration/spi_slave/: spi_slave.ino
